--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
     async function fetchData() {
-      const response = await fetch('http://212.109.198.222:3000/balance');
+      const response = await fetch('http://localhost:3000/balance');
       const data = await response.json();
       return { timestamp: new Date().toLocaleString(), balance: parseFloat(data.balance) };
     }
